--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,16 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "C:/Users/RAOUA/Desktop/frontt/front/node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "C:/Users/RAOUA/Desktop/frontt/front/node_modules/bootstrap-icons/font/bootstrap-icons.css",
+              "C:/Users/RAOUA/Desktop/frontt/front/node_modules/font-awesome/css/font-awesome.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.css"
             ],
-            "scripts": []
+            "scripts": [
+              "C:/Users/RAOUA/Desktop/frontt/front/node_modules/jquery/dist/jquery.min.js"
+            
+            ]
           },
           "configurations": {
             "production": {
