--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "@popperjs/core": "^2.11.5",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
+    "primeicons": "^5.0.0",
+    "primeng": "^13.3.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
