--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,12 @@
               "node_modules/@fortawesome/fontawesome-free/css/all.css",             
 "C:/Users/RAOUA/Desktop/frontt/front/node_modules/primeicons/primeicons.css",
 "C:/Users/RAOUA/Desktop/frontt/front/node_modules/primeng/resources/themes/lara-light-blue/theme.css",
-"C:/Users/RAOUA/Desktop/frontt/front/node_modules/primeng/resources/primeng.min.css"
+"C:/Users/RAOUA/Desktop/frontt/front/node_modules/primeng/resources/primeng.min.css",
+"C:/Users/RAOUA/Desktop/frontt/front/node_modules/@fullcalendar/core/main.css",
+"C:/Users/RAOUA/Desktop/frontt/front/node_modules/@fullcalendar/daygrid/main.css",
+"node_modules/@fullcalendar/core/main.css",
+"node_modules/@fullcalendar/daygrid/main.css"
+
 
 
             ],
