--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "@fullcalendar/angular": "^5.11.0",
+    "@fullcalendar/daygrid": "^5.11.0",
+    "@fullcalendar/interaction": "^5.11.0",
+    "@fullcalendar/list": "^5.11.0",
+    "@fullcalendar/timegrid": "^5.11.0",
     "@popperjs/core": "^2.11.5",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.1.3",
