--- a/angular.json
+++ b/angular.json
@@ -31,14 +31,15 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.scss",
               "C:/Users/RAOUA/Desktop/frontt/front/node_modules/bootstrap/dist/css/bootstrap.min.css",
               "C:/Users/RAOUA/Desktop/frontt/front/node_modules/bootstrap-icons/font/bootstrap-icons.css",
-              "C:/Users/RAOUA/Desktop/frontt/front/node_modules/font-awesome/css/font-awesome.min.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.css",             
+              "C:/Users/RAOUA/Desktop/frontt/front/node_modules/font-awesome/css/font-awesome.min.css",             
+"node_modules/@fortawesome/fontawesome-free/css/all.css",
 "C:/Users/RAOUA/Desktop/frontt/front/node_modules/primeicons/primeicons.css",
 "C:/Users/RAOUA/Desktop/frontt/front/node_modules/primeng/resources/themes/lara-light-blue/theme.css",
-"C:/Users/RAOUA/Desktop/frontt/front/node_modules/primeng/resources/primeng.min.css",
+              "C:/Users/RAOUA/Desktop/frontt/front/node_modules/primeng/resources/primeng.min.css"
 
 
 
@@ -47,6 +48,7 @@
             ],
             "scripts": [
               "C:/Users/RAOUA/Desktop/frontt/front/node_modules/jquery/dist/jquery.min.js",
+           
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/@popperjs/core/dist/cjs/popper.js",
               "node_modules/@popperjs/core/dist/umd/popper.js",
@@ -119,6 +121,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.scss"
             ],
             "scripts": []
